--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/deploy_deb.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/deploy_deb.yaml
@@ -1,4 +1,4 @@
 - builder:
     name: deploy_deb
     builders:
-      - shell: !include-raw scripts/debian/deploy_deb.sh
+      - shell: !include-raw: scripts/debian/deploy_deb.sh
