--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/deploy_katello_site.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/deploy_katello_site.yaml
@@ -1,4 +1,4 @@
 - builder:
     name: deploy_katello_site
     builders:
-      - shell: !include-raw scripts/deploy_katello_site.sh
+      - shell: !include-raw: scripts/deploy_katello_site.sh
