--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/deploy_web.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/deploy_web.yaml
@@ -1,4 +1,4 @@
 - builder:
     name: deploy_web
     builders:
-      - shell: !include-raw scripts/deploy_web.sh
+      - shell: !include-raw: scripts/deploy_web.sh
