--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/packaging_repoclosure.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/packaging_repoclosure.yaml
@@ -1,4 +1,4 @@
 - builder:
     name: packaging_repoclosure
     builders:
-      - shell: !include-raw scripts/packaging_repoclosure.sh
+      - shell: !include-raw: scripts/packaging_repoclosure.sh
