--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/release_push_rpm_katello.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/release_push_rpm_katello.yaml
@@ -1,4 +1,4 @@
 - builder:
     name: release_push_rpm_katello
     builders:
-      - shell: !include-raw scripts/release_push_rpm_katello.sh
+      - shell: !include-raw: scripts/release_push_rpm_katello.sh
