--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/systest_foreman.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/systest_foreman.yaml
@@ -1,4 +1,4 @@
 - builder:
     name: systest_foreman
     builders:
-      - shell: !include-raw scripts/systest_foreman.sh
+      - shell: !include-raw: scripts/systest_foreman.sh
