--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/test_develop.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/test_develop.yaml
@@ -1,4 +1,4 @@
 - builder:
     name: test_develop
     builders:
-      - shell: !include-raw scripts/test/test_develop.sh
+      - shell: !include-raw: scripts/test/test_develop.sh
