--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/test_proxy.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/test_proxy.yaml
@@ -1,4 +1,4 @@
 - builder:
     name: test_proxy
     builders:
-      - shell: !include-raw scripts/test/proxy.sh
+      - shell: !include-raw: scripts/test/proxy.sh
