--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/deploy_web.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/deploy_web.yaml
@@ -5,7 +5,8 @@
       - theforeman.org
     triggers:
       - github
-      - pollscm: '*/5 * * * *'
+      - pollscm:
+          cron: '*/5 * * * *'
     builders:
       - deploy_web
     publishers:
