--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/publishers/gemset_cleanup.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/publishers/gemset_cleanup.yaml
@@ -7,4 +7,4 @@
             operator: AND
           escalate-status: false
           run-if-job-successful: false
-          script: !include-raw scripts/gemset_cleanup.sh
+          script: !include-raw: scripts/gemset_cleanup.sh
