--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/triggers/scm_fifteen_minutes.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/triggers/scm_fifteen_minutes.yaml
@@ -1,4 +1,5 @@
 - trigger:
     name: scm_fifteen_minutes
     triggers:
-      - pollscm: 'H/15 * * * *'
+      - pollscm:
+          cron: 'H/15 * * * *'
