--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/clone_foreman.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/clone_foreman.yaml
@@ -1,4 +1,4 @@
 - builder:
     name: clone_foreman
     builders:
-      - shell: !include-raw scripts/test/clone_foreman.sh
+      - shell: !include-raw: scripts/test/clone_foreman.sh
