--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/clone_repository.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/clone_repository.yaml
@@ -1,4 +1,4 @@
 - builder:
     name: clone_repository
     builders:
-      - shell: !include-raw scripts/clone_repository.sh
+      - shell: !include-raw: scripts/clone_repository.sh
