--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/test_hammer_cli_foreman.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/test_hammer_cli_foreman.yaml
@@ -1,4 +1,4 @@
 - builder:
     name: test_hammer_cli_foreman
     builders:
-      - shell: !include-raw scripts/test/test_hammer_cli_foreman.sh
+      - shell: !include-raw: scripts/test/test_hammer_cli_foreman.sh
