--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/test_katello.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/test_katello.yaml
@@ -1,4 +1,4 @@
 - builder:
     name: test_katello
     builders:
-      - shell: !include-raw scripts/test/test_katello.sh
+      - shell: !include-raw: scripts/test/test_katello.sh
