--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/test_plugin.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/test_plugin.yaml
@@ -1,4 +1,4 @@
 - builder:
     name: test_plugin
     builders:
-      - shell: !include-raw scripts/test/test_plugin.sh
+      - shell: !include-raw: scripts/test/test_plugin.sh
