--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_plugin.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_plugin.yaml
@@ -14,7 +14,8 @@
           branch: '{branch}'
     triggers:
       - github
-      - pollscm: 'H/15 * * * *'
+      - pollscm:
+          cron: 'H/15 * * * *'
       - schedule-failed-builds: 'H H * * H'
       - timed: 'H H * * H'
     builders:
