--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman-packaging.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman-packaging.yaml
@@ -2,19 +2,21 @@
     name: foreman-deb-packaging
     scm:
       - git:
-         url: git://github.com/${repoowner}/foreman-packaging.git
-         recursive-submodules: true
-         skip-tag: true
-         git-config-name: Jenkins
-         git-config-email: 'packaging@theforeman.org'
-         branches:
-          - '*/deb/develop'
+          url: git://github.com/${repoowner}/foreman-packaging.git
+          submodule:
+            recursive: true
+          skip-tag: true
+          git-config-name: Jenkins
+          git-config-email: 'packaging@theforeman.org'
+          branches:
+            - '*/deb/develop'
 - scm:
     name: foreman-rpm-packaging
     scm:
       - git:
-         url: git://github.com/theforeman/foreman-packaging.git
-         recursive-submodules: true
-         skip-tag: true
-         branches:
-          - '*/rpm/develop'
+          url: git://github.com/theforeman/foreman-packaging.git
+          submodule:
+            recursive: true
+          skip-tag: true
+          branches:
+            - '*/rpm/develop'
