Creates db axis dynamically for test_plugin_matrix

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/foreman_discovery.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/foreman_discovery.yaml
@@ -1,6 +1,6 @@
 - project:
     name: foreman_discovery
-    repo: foreman_discovery
+    defaults: plugin
     branch:
       - develop:
           foreman_branch: develop
