--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/foreman_pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/foreman_pipeline.yaml
@@ -1,5 +1,6 @@
 - project:
     name: foreman_pipeline
     defaults: plugin
+    dbs: 'postgres sqlite3'
     jobs:
       - 'test_plugin_{name}_{branch}'
