Fix working directory and wipe wd to remove PR remotes

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/bastion.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/bastion.yaml
@@ -3,7 +3,7 @@
     scm:
       - git:
           url: git://github.com/katello/bastion.git
-          wipe-workspace: false
+          wipe-workspace: true
           basedir: 'plugin'
           branches:
             - '${branch}'
