Enable PL stable (non-PC1) repo by default
Create new jobs for testing OS and PC1 versions of Puppet specifically.
Parameters for systest_nightly reduced to a single pl_puppet parameter
that takes a PUPPET_REPO string, or 'false' to disable it.

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman.yaml
@@ -25,14 +25,10 @@
           name: os
           default: ''
           description: 'OS code, e.g. <code>el6</code>, <code>f18</code>, <code>wheezy</code>'
-      - bool:
+      - string:
           name: pl_puppet
-          default: false
-          description: 'Whether to install Puppet from Puppet Labs first, instead of using the distro version.'
-      - bool:
-          name: nightly_puppet
-          default: false
-          description: 'Whether to enable nightly Puppet repos, use in addition to pl_puppet.'
+          default: stable
+          description: 'Whether to install Puppet from Puppet Labs first, instead of using the distro version. Set to stable/pc1/nightly for a specific repo, or false to disable.'
       - bool:
           name: run_puppet_tests
           default: false
