--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_puppet_stable.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_puppet_stable.yaml
@@ -1,17 +1,15 @@
 - job:
-    name: systest_foreman_puppet_nightly
-    disabled: true
-    description: 'Current status: <b>BROKEN</b> (<a href="http://projects.theforeman.org/issues/8447">#8447</a>)'
+    name: systest_foreman_puppet_stable
     project-type: matrix
     logrotate:
       daysToKeep: -1
       numToKeep: 3
     triggers:
-      - timed: 'H 7 * * 1'
+      - timed: 'H 6 * * 1'
     builders:
       - trigger-builds:
         - project: systest_foreman
-          predefined-parameters: "os=${os}\npl_puppet=nightly\nrun_puppet_tests=true"
+          predefined-parameters: "os=${os}\npl_puppet=stable\nrun_puppet_tests=true"
           block: true
     axes:
       - axis:
@@ -22,7 +20,6 @@
           - el7
           - f21
           - wheezy
-          - jessie
           - precise
           - trusty
     publishers:
