Enable PC1/nightly tests, without Puppet tests

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_puppet_nightly.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_puppet_nightly.yaml
@@ -1,7 +1,6 @@
 - job:
     name: systest_foreman_puppet_nightly
-    disabled: true
-    description: 'Current status: <b>BROKEN</b> (<a href="http://projects.theforeman.org/issues/8447">#8447</a>)'
+    description: 'Current status: installation OK, integration BROKEN (<a href="http://projects.theforeman.org/issues/8447">#8447</a>)'
     project-type: matrix
     logrotate:
       daysToKeep: -1
@@ -11,7 +10,7 @@
     builders:
       - trigger-builds:
         - project: systest_foreman
-          predefined-parameters: "os=${os}\npl_puppet=nightly\nrun_puppet_tests=true"
+          predefined-parameters: "os=${os}\npl_puppet=nightly\nrun_puppet_tests=false"
           block: true
     axes:
       - axis:
