Remove wheezy/precise from tests

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_puppet_stable.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_puppet_stable.yaml
@@ -19,8 +19,7 @@
           - el6
           - el7
           - f21
-          - wheezy
-          - precise
+          # - jessie   # no packages published
           - trusty
     publishers:
       - ircbot_freenode
