--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_puppet_stable.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_puppet_stable.yaml
@@ -21,5 +21,6 @@
           - f21
           # - jessie   # no packages published
           - trusty
+          # - xenial   # no packages published
     publishers:
       - ircbot_freenode
