--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_test_deb.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_test_deb.yaml
@@ -22,6 +22,7 @@
           values:
           - jessie
           - trusty
+          - xenial
     publishers:
       - trigger:
           project: release_nightly_push_deb
