Disable Xenial PC1 testing until Puppet Server 2.4.0

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_puppet_pc1.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_puppet_pc1.yaml
@@ -22,6 +22,6 @@
           - f21
           - jessie
           - trusty
-          - xenial
+          # - xenial  # no puppetserver package yet
     publishers:
       - ircbot_freenode
