--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_katello_core.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_katello_core.yaml
@@ -11,10 +11,19 @@
           name: branch
           default: master
           description: "Branch to run test suite on"
+      - pr_parameters
       - string:
           name: foreman_branch
           default: develop
           description: "Foreman branch to run test suite against"
+      - string:
+          name: foreman_pr_git_url
+          default:
+          description: 'GForeman it URL to PR to test, e.g. git://github.com/user/foo.git'
+      - string:
+          name: foreman_pr_git_ref
+          default:
+          description: 'Foreman Git ref for PR to test, usually the branch name'
     concurrent: true
     scm:
       - katello
