--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_puppet_nightly.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_puppet_nightly.yaml
@@ -1,6 +1,5 @@
 - job:
     name: systest_foreman_puppet_nightly
-    description: 'Current status: installation OK, integration BROKEN (<a href="http://projects.theforeman.org/issues/8447">#8447</a>)'
     project-type: matrix
     logrotate:
       daysToKeep: -1
@@ -10,7 +9,7 @@
     builders:
       - trigger-builds:
         - project: systest_foreman
-          predefined-parameters: "os=${os}\npl_puppet=nightly\nrun_puppet_tests=false"
+          predefined-parameters: "os=${os}\npl_puppet=nightly\nrun_puppet_tests=true"
           block: true
     axes:
       - axis:
