Remove Ruby 1.9.3 testing on develop

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_plugin_matrix.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_plugin_matrix.yaml
@@ -60,7 +60,7 @@
           values:
             - fast
     execution-strategy:
-      combination-filter: "!(foreman_branch == '1.7-stable' && ruby == '2.1')"
+      combination-filter: "!(foreman_branch == 'develop' && ruby == '1.9.3')"
     wrappers:
       - timestamps
       - abort_build:
