Import release_nightly_build_rpm, packaging_build_rpm

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_repoclosure.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_repoclosure.yaml
@@ -5,7 +5,8 @@
       daysToKeep: 7
       numToKeep: -1
     scm:
-      - foreman-rpm-packaging
+      - foreman-rpm-packaging:
+          branch: rpm/develop
     builders:
       - packaging_repoclosure
     parameters:
