--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman-packaging.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman-packaging.yaml
@@ -19,4 +19,4 @@
             recursive: true
           skip-tag: true
           branches:
-            - '*/rpm/develop'
+            - 'origin/{branch}'
