Change version numbers to strings

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_plugins_test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_plugins_test.yaml
@@ -13,10 +13,10 @@
           type: user-defined
           name: version
           values:
-          - nightly
-          - 1.9
-          - 1.10
-          - 1.11
+          - 'nightly'
+          - '1.9'
+          - '1.10'
+          - '1.11'
       - axis:
           type: user-defined
           name: os
