Only build selinux weekly

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_trigger_selinux_develop.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_trigger_selinux_develop.yaml
@@ -5,7 +5,7 @@
       - foreman-selinux:
           branch: 'develop'
     triggers:
-      - timed: 'H 3 * * 1-5'
+      - timed: 'H 3 * * 1'
       - scm_fifteen_minutes
       - github
     builders:
