--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_coreproject.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_coreproject.yaml
@@ -13,7 +13,8 @@
       - github:
           url: https://github.com/theforeman/foreman-packaging/
     scm:
-      - foreman-deb-packaging
+      - foreman-deb-packaging:
+          branch: '${repo}'
     axes:
       - axis:
           type: user-defined
