Update deb plugin builder to trusty
jessie/xenial are affected by a broken foreman-ruby symlink in older
Foreman versions, trusty works on all.

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_plugin.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_plugin.yaml
@@ -15,7 +15,7 @@
           type: user-defined
           name: os
           values:
-          - wheezy
+          - trusty
       - axis:
           type: slave
           name: arch
