Wipe theforeman.org workspace to discard Gemfile.lock

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/theforeman.org.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/theforeman.org.yaml
@@ -3,6 +3,6 @@
     scm:
       - git:
           url: git://github.com/theforeman/theforeman.org.git
-          wipe-workspace: false
+          wipe-workspace: true
           branches:
             - gh-pages
