Parameterise Ruby version to carry into gemset_cleanup

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/deploy_web.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/deploy_web.yaml
@@ -7,6 +7,11 @@
       - github
       - pollscm:
           cron: '*/5 * * * *'
+    parameters:
+      - string:
+          name: ruby
+          default: '2.3.0'
+          description: "Ruby version to run rake generate task under"
     builders:
       - deploy_web
     publishers:
