Verify expected Foreman version during systest in release tests

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_test.yaml
@@ -16,7 +16,7 @@
           block: true
       - trigger-builds:
         - project: systest_foreman
-          predefined-parameters: "os=${os}\nrepo=${major_version}\nstaging=true"
+          predefined-parameters: "os=${os}\nrepo=${major_version}\nstaging=true\nexpected_version=${version}"
           block: true
     axes:
       - axis:
