Change release_mash/test publisher type to pass parameters

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_test.yaml
@@ -35,7 +35,7 @@
     execution-strategy:
       combination-filter: '!( ((major_version == "1.10" || major_version == "1.12") && os == "f21") || ((major_version == "1.10" || major_version == "1.11") && os == "f24") || ((major_version == "1.12") && os == "wheezy") || ((major_version == "1.12") && os == "precise") || ((major_version == "1.10" || major_version == "1.11") && os == "xenial") )'
     publishers:
-      - trigger:
-          project: 'release_push_deb, release_push_rpm'
-          threshold: SUCCESS
-          current-parameters: true
+      - trigger-parameterized-builds:
+          - project: 'release_push_deb, release_push_rpm'
+            condition: SUCCESS
+            current-parameters: true
