--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_mash.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_mash.yaml
@@ -14,7 +14,7 @@
           predefined-parameters: "script=foreman-mash-split-${major_version}.py"
           block: true
     publishers:
-      - trigger:
-          project: release_test
-          threshold: SUCCESS
-          current-parameters: true
+      - trigger-parameterized-builds:
+          - project: release_test
+            condition: SUCCESS
+            current-parameters: true
