Import and use ghprb for Foreman PR tests

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman.yaml
@@ -6,3 +6,13 @@
           wipe-workspace: true
           branches:
             - '{branch}'
+
+- scm:
+    name: foreman_pr
+    scm:
+      - git:
+          url: git://github.com/theforeman/foreman.git
+          wipe-workspace: true
+          branches:
+            - '${sha1}'
+          refspec: '+refs/pull/*:refs/remotes/origin/pr/*'
