Remove Ubuntu 14.04 from Puppet OS version test matrix

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_puppet_os.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_puppet_os.yaml
@@ -19,7 +19,7 @@
           - el7
           - f24
           - jessie
-          - trusty
+          # - trusty  # older than the minimum installer version
           - xenial
     publishers:
       - ircbot_freenode
