Reduce plugin matrix test job count by limiting ruby/database combo
Reduce the number of test jobs by only testing postgres and mysql
once and testing all supported rubies against sqlite.

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_plugin_matrix.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_plugin_matrix.yaml
@@ -60,7 +60,10 @@
           values:
             - fast
     execution-strategy:
-      combination-filter: "!(foreman_branch == 'develop' && ruby == '1.9.3')"
+      combination-filter: >
+        "(foreman_branch != 'develop' && ruby == '1.9.3' && database == 'postgresql') ||
+        (database == 'postgresql' && ruby != '1.9.3') ||
+        (ruby == '2.3')"
     wrappers:
       - timestamps
       - abort_build:
