--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_test.yaml
@@ -33,7 +33,7 @@
           - wheezy
           - xenial
     execution-strategy:
-      combination-filter: '!( ((major_version == "1.10" || major_version == "1.12") && os == "f21") || ((major_version == "1.10" || major_version == "1.11") && os == "f24") || ((major_version == "1.12") && os == "wheezy") || ((major_version == "1.12") && os == "precise") || ((major_version == "1.10" || major_version == "1.11") && os == "xenial") )'
+      combination-filter: '!( ((major_version == "1.11") && os == "f24") || ((major_version == "1.12" || major_version == "1.13") && os == "wheezy") || ((major_version == "1.12" || major_version == "1.13") && os == "precise") || ((major_version == "1.11") && os == "xenial") || ((major_version == "1.13") && os == "el6") )'
     publishers:
       - trigger-parameterized-builds:
           - project: 'release_push_deb, release_push_rpm'
