20 min quiet period for plugin tests

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_plugin.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_plugin.yaml
@@ -8,6 +8,7 @@
     logrotate:
       daysToKeep: 45
       numToKeep: -1
+    quiet-period: 1200
     scm:
       - foreman_plugin:
           repo: '{repo}'
