--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_trigger_selinux_develop.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_trigger_selinux_develop.yaml
@@ -4,13 +4,19 @@
     scm:
       - foreman-selinux:
           branch: 'develop'
+    parameters:
+      - string:
+          name: ruby
+          default: '2.0.0'
+          description: "Ruby version to run rake generate task under"
     triggers:
       - timed: 'H 3 * * 1'
       - scm_fifteen_minutes
       - github
     builders:
-      - shell: rake pkg:generate_source
+      - pkg_generate_source
     publishers:
+      - gemset_cleanup
       - ircbot_freenode
       - archive:
           artifacts: 'pkg/*'
