Remove superfluous quoting from combination filter

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_plugin_matrix.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_plugin_matrix.yaml
@@ -61,9 +61,9 @@
             - fast
     execution-strategy:
       combination-filter: >
-        "(foreman_branch != 'develop' && ruby == '1.9.3' && database == 'postgresql') ||
+        (foreman_branch != 'develop' && ruby == '1.9.3' && database == 'postgresql') ||
         (database == 'postgresql' && ruby != '1.9.3') ||
-        (ruby == '2.3')"
+        (ruby == '2.3')
     wrappers:
       - timestamps
       - abort_build:
