Change PR tests to use PR commit, not merge commit
When the base branch changes, the SHA is no longer available so causes
a build failure checking out the commit. Using the PR commit ensures the
build commit will always be available unless the PR itself changes.

https://github.com/janinko/ghprb/issues/116

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman.yaml
@@ -14,5 +14,5 @@
           url: git://github.com/theforeman/foreman.git
           wipe-workspace: true
           branches:
-            - '${sha1}'
+            - '${ghprbActualCommit}'
           refspec: '+refs/pull/*:refs/remotes/origin/pr/*'
