replace homegrown ntp module with puppetlabs-ntp
- use version 4.2.0 for Puppet 3.x compatibility

--- a/.gitmodules
+++ b/.gitmodules
@@ -98,3 +98,6 @@
 [submodule "puppet/modules/inifile"]
 	path = puppet/modules/inifile
 	url = https://github.com/puppetlabs/puppetlabs-inifile.git
+[submodule "puppet/modules/ntp"]
+	path = puppet/modules/ntp
+	url = https://github.com/puppetlabs/puppetlabs-ntp.git
